# Kurs_3

./: README.md  pyproject.toml
nikitos/nikitos/: transaction.py
tests/: test_bank_operation.py  test_transaction.py
utils/: bank_operations.py  function.py
